<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:orientation="vertical">
			<ImageView
				android:id="@+id/imageView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:src="@drawable/app_logo"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical">
			<TextView
				android:id="@+id/textView1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/amount"
				android:textAppearance="?android:attr/textAppearanceSmall"/>
			<Button
				android:id="@+id/order"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/take_order"/>
			<Button
				android:id="@+id/notification"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:visibility="gone"
				android:text="@string/take_notificatoin"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>

<!-- - See more at: http://www.theappguruz.com/blog/integrate-paypal-in-android#sthash.4d39KZAR.dpuf  -->
</RelativeLayout>